--- a/my-expo-app/package.json
+++ b/my-expo-app/package.json
@@ -11,16 +11,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "^52.0.35",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "nativewind": "latest",
     "react": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "4.12.0",
     "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-reanimated": "3.16.2",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^4.6.0",
     "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
